refactor : HB | react-native-webview to latest for security fix. [https://www.npmjs.com/advisories/1560]

--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "prettier": "^2.0.5",
     "react": "16.11.0",
     "react-native": "0.62.0",
-    "react-native-webview": "~8.1.1",
+    "react-native-webview": "11.6.2",
     "release-it": "^13.5.8",
     "typescript": "^3.8.3"
   },
